--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/react-grid-layout": "^1.3.6",
     "axios": "^1.13.5",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.2",
     "react-dom": "19.2.3",
+    "react-grid-layout": "^2.2.2",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.1"
   },
