--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "19.2.3",
     "react-day-picker": "^9.13.2",
     "react-dom": "19.2.3",
+    "react-easy-crop": "^5.5.6",
     "react-grid-layout": "^2.2.2",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.1"
