--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - "3000:3000"
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:8000/api/v1
+      NEXT_PUBLIC_KIOSK_ID: ${NEXT_PUBLIC_KIOSK_ID:-kiosk-01}
     depends_on:
       - backend
 
