--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     environment:
       POSTGRES_HOST: db
       POSTGRES_PORT: 5432
+    volumes:
+      - ./static:/app/static
     depends_on:
       db:
         condition: service_healthy
