--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      NEXT_PUBLIC_API_URL: http://localhost:8000/api/v1
+      NEXT_PUBLIC_API_URL: /api/v1
+      BACKEND_INTERNAL_URL: http://backend:8000
       NEXT_PUBLIC_KIOSK_ID: ${NEXT_PUBLIC_KIOSK_ID:-kiosk-01}
     depends_on:
       - backend
