Create Gaith work branch for translation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "i18n:check": "node scripts/i18n-check.cjs",
+    "i18n:check:strict": "node scripts/i18n-check.cjs --strict",
+    "i18n:hardcoded": "node scripts/i18n-hardcoded-check.cjs",
+    "i18n:hardcoded:strict": "node scripts/i18n-hardcoded-check.cjs --fail-on-found",
+    "i18n:rtl": "node scripts/i18n-rtl-check.cjs",
+    "i18n:rtl:strict": "node scripts/i18n-rtl-check.cjs --fail-on-found",
+    "i18n:verify": "npm run i18n:check && npm run i18n:hardcoded && npm run i18n:rtl",
+    "i18n:verify:strict": "npm run i18n:check:strict && npm run i18n:hardcoded:strict && npm run i18n:rtl:strict",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui"
   },
