--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,25 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+  workflow_dispatch:
+
+env:
+  APP_ENV: test
+  POSTGRES_HOST: localhost
+  POSTGRES_PORT: 5432
+  POSTGRES_USER: user
+  POSTGRES_PASSWORD: password
+  POSTGRES_DB: gym_test
+  SECRET_KEY: supersecretkeyfortesting123456
+  KIOSK_SIGNING_KEY: anotherlongtestsecret123456
+  CI: true
+  PAYROLL_AUTO_ENABLED: false
 
 jobs:
-  test:
+  backend-test:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -19,76 +32,169 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd pg_isready
+          --health-cmd "pg_isready -U user -d gym_test"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: "22"
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pip-audit
-    - name: Install frontend dependencies
-      working-directory: frontend
-      run: npm ci
-    - name: Generate security audit report
-      env:
-        APP_ENV: test
-        POSTGRES_HOST: localhost
-        POSTGRES_USER: user
-        POSTGRES_PASSWORD: password
-        POSTGRES_DB: gym_test
-        POSTGRES_PORT: 5432
-        SECRET_KEY: "supersecretkeyfortesting123456"
-        KIOSK_SIGNING_KEY: "anotherlongtestsecret123456"
-        CI: true
-      run: |
-        python -m app.security_audit.cli
-    - name: Generate backend dependency audit report
-      run: |
-        mkdir -p reports
-        pip-audit -r requirements.txt -f json -o reports/backend-dependency-audit.json
-    - name: Generate frontend dependency audit report
-      working-directory: frontend
-      run: |
-        mkdir -p reports
-        set +e
-        npm audit --json --omit=dev > reports/dependency-audit.json
-        status=$?
-        set -e
-        if [ "$status" -gt 1 ]; then
-          exit "$status"
-        fi
-    - name: Run Tests
-      env:
-        APP_ENV: test
-        POSTGRES_HOST: localhost
-        POSTGRES_USER: user
-        POSTGRES_PASSWORD: password
-        POSTGRES_DB: gym_test
-        POSTGRES_PORT: 5432
-        SECRET_KEY: "supersecretkeyfortesting123456"
-        KIOSK_SIGNING_KEY: "anotherlongtestsecret123456"
-        CI: true
-      run: |
-        pytest
-    - name: Upload security reports
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: security-reports
-        path: |
-          reports/security-audit.json
-          reports/backend-dependency-audit.json
-          frontend/reports/dependency-audit.json
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install backend dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run Alembic migrations
+        run: alembic upgrade head
+      - name: Run backend tests
+        run: pytest -q
+
+  frontend-quality:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+      - name: Install frontend dependencies
+        run: npm ci
+      - name: Run lint
+        run: npm run lint
+      - name: Run i18n verification
+        run: npm run i18n:verify:strict
+      - name: Run production build
+        run: npm run build
+
+  security-audit:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: gym_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U user -d gym_test"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+      - name: Install backend dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pip-audit
+      - name: Install frontend dependencies
+        working-directory: frontend
+        run: npm ci
+      - name: Generate app security audit report
+        run: python -m app.security_audit.cli
+      - name: Generate backend dependency audit report
+        run: |
+          mkdir -p reports
+          pip-audit -r requirements.txt -f json -o reports/backend-dependency-audit.json
+      - name: Generate frontend dependency audit report
+        working-directory: frontend
+        run: |
+          mkdir -p reports
+          set +e
+          npm audit --json --omit=dev > reports/dependency-audit.json
+          status=$?
+          set -e
+          if [ "$status" -gt 1 ]; then
+            exit "$status"
+          fi
+      - name: Upload security reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-reports
+          path: |
+            reports/security-audit.json
+            reports/backend-dependency-audit.json
+            frontend/reports/dependency-audit.json
+
+  image-build:
+    runs-on: ubuntu-latest
+    needs:
+      - backend-test
+      - frontend-quality
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build backend image
+        run: docker build -t gym-erp-backend:${{ github.sha }} .
+      - name: Build frontend image
+        run: docker build -t gym-erp-frontend:${{ github.sha }} -f frontend/Dockerfile .
+
+  smoke:
+    runs-on: ubuntu-latest
+    needs:
+      - backend-test
+      - frontend-quality
+      - image-build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create CI env file
+        run: |
+          cat > .env <<'EOF'
+          APP_ENV=test
+          POSTGRES_USER=user
+          POSTGRES_PASSWORD=password
+          POSTGRES_DB=gym_test
+          POSTGRES_HOST=localhost
+          POSTGRES_PORT=5432
+          SECRET_KEY=supersecretkeyfortesting123456
+          KIOSK_SIGNING_KEY=anotherlongtestsecret123456
+          BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
+          NEXT_PUBLIC_KIOSK_ID=kiosk-01
+          PAYROLL_AUTO_ENABLED=false
+          EOF
+      - name: Start database
+        run: docker compose up -d db
+      - name: Run database migrations
+        run: docker compose run --rm backend alembic upgrade head
+      - name: Start application stack
+        run: docker compose up -d backend frontend
+      - name: Verify backend health
+        run: |
+          for attempt in {1..30}; do
+            if curl -fsS http://127.0.0.1:8000/healthz; then
+              exit 0
+            fi
+            sleep 5
+          done
+          exit 1
+      - name: Verify frontend page
+        run: |
+          for attempt in {1..30}; do
+            if curl -fsS http://127.0.0.1:3000/login > /dev/null; then
+              exit 0
+            fi
+            sleep 5
+          done
+          exit 1
+      - name: Shut down stack
+        if: always()
+        run: docker compose down -v
